--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 title: Home
-description: Coding Sprint - Supervised Neural Time Series 2017
+description: MNE Annual Coding Sprint 2019
 image: /images/background.png
 bottom_image: /images/all-logo.png
 map:
-  latitude: 40.7290387
-  longitude: -73.996374
-  address: "(6th floor), 60 5th Avenue, New York University, New York"
+  latitude: 48.869516
+  longitude: 2.338116
+  address: "Facebook Office, 6 rue Ménars, Paris, France"
   zoom: 13
 ---
 
@@ -14,15 +14,15 @@ map:
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
       <center>
-  			<h1 class="editable">Supervised Neural Time Series 2017</h1>
-  			<p class="subtext editable"><b>March 27th - 31st, New York</b></p>
+  			<h1 class="editable">MNE Code Sprint 2019</h1>
+  			<p class="subtext editable"><b>April 22nt - 26th, Paris</b></p>
       </center>
 		</div>
 	</div>
 	<div class="learn-more">
     <a href="#why-what">
       <center><p class="subtext editable">Learn more</p>
-      <img src="https://kingjr.github.io/supervised_time_series/images/arrow.gif">
+      <img src="https://mne-tools.github.io/sprint2019/images/arrow.gif">
     </center></a></div>
 </section>
 
@@ -30,31 +30,24 @@ map:
 	<section class="info" id="why-what">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Why?</h2>
-				<p class="editable">
-			          Holy sh*t! We're in a paradigm shift.
-        			</p>
+				<h2 class="editable">Why a code print?</h2>
+                    <p class="editable">
+                        Alone you go fast and together we go far!
+                    </p>
 			        <p class="editable">
-				  In less than a decade, machine learning and scalable computing have demonstrated how knowledge can be extracted from complex datasets. The primary workhorse of this success has been free open source software (FOSS). With its strong emphasis on API design, the FOSS culture has made it less effortful to plan, develop in teams, re-use, distribute, teach, optimize & scale data analysis efforts. Coding sprints are a way to focus development efforts and share best practices that generalize across a range of application domains.
+                        <a href="https://github.com/mne-tools/mne-python">MNE</a>
+                        is the most Python software to making sense of neural signals
+                        such as EEG or MEG. <a href="https://github.com/mne-tools/mne-python">MNE</a>
+                        is developped by a community of developers scattered around the world.
+                        The annual MNE code sprint is the moment for the MNE developers to exchange,
+                        share a vision and make fast progress.
+                    </p>
+                    <p class="editable">
+                        The primary workhorse of this success has been free open source software (FOSS). With its strong emphasis on API design, the FOSS culture has made it less effortful to plan, develop in teams, re-use, distribute, teach, optimize & scale data analysis efforts. Coding sprints are a way to focus development efforts and share best practices that generalize across a range of application domains.
 			        </p>
 				<h2 class="editable">What?</h2>
 			        <p class="editable">
-				  Supervised Neural Time Series is a week-long coding sprint to gather established data scientists, who specialize in high-dimensional neural time series. Together, we will work on advancing popular or upcoming FOSS projects that enable the analysis of a broad class of neural recordings: extracellular neurophysiology (spike trains), electro-corticography (ECoG) and magneto-/electro-encephalography (MEG/EEG).
-				</p>
-
-				<ul>
-				    <li> <a href="https://github.com/mne-tools/mne-python">MNE</a> is a single suite of tools for pre-processing, source-modeling, decoding and visualization of MEG, EEG and ECoG data.
-				    </li>
-				    <li> <a href="https://github.com/glm-tools/pyglmnet">Pyglmnet</a> enables generalized linear modeling with advanced regularization.
-				    </li>
-				    <li> <a href="https://github.com/kordinglab/spykes">Spykes</a> offers 101 analysis tools for spike trains and visualization, including rasters, PSTHs, tuning curves, RF estimation and population decoding.
-				    </li>
-				    <li> <a href="https://github.com/alexandrebarachant/pyRiemann">PyRiemann</a> offers tools to characterize the covariance structure of high-dimensional signals with Riemannian geometry.
-				    </li>
-				</ul>
-
-				<p class="editable">
-				  We are looking for established data science developers to both contribute and bring their own projects. Although the organizers specialize in neural time series, we are looking to productively engage with data scientists from fields with similarly structure data (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc.). In keeping with this push for diversity, we particularly welcome women and underrepresented minorities.
+				  The aim of the event is to gather established experts in the processing of neural time series data. Together, we will work on the software stack for all aspects of the processing chain: from pre-precossing to advanced machine learning use cases, including integration experiments using <a href="https://pytorch.org">PyTorch</a>.
 				</p>
 
 			</div>
@@ -65,25 +58,24 @@ map:
 		<div class="container">
 			<h2 class="editable">Get Ready!</h2>
 				<p class="editable">
-				  The detailed Pull Requests are described on the github repository of each package (<a href="https://github.com/mne-tools/mne-python/projects/1">MNE</a>, <a href="https://github.com/glm-tools/pyglmnet/projects/1">pyGLMnet</a>, <a href="https://github.com/KordingLab/spykes">spykes</a>, <a href="https://github.com/alexandrebarachant/pyRiemann">pyRiemann</a>).
-
-          During the sprint, we'll chat on <a href="https://gitter.im/mne-tools/supervised_timeseries_2017">gitter</a>.
+				  The detailed Pull Requests / Issues tackled during the sprint are described on the <a href="https://github.com/mne-tools/mne-python/projects/4">MNE github project page</a>.
+          During the sprint, we'll chat on <a href="https://gitter.im/mne-tools/mne-python">gitter</a>.
           <p class="editable">
-          If you are not a core developer, you will need to:
+<!--           If you are not a core developer, you will need to:
           </p>
-  				<ul>
+  			<ul>
               <li> contact me (jeanremi.king [at] gmail.com) to sign-up to the coding sprint and be allowed in the building.</li>
   				    <li> ensure that you have installed the master (dev) branch of each package.</li>
               <li> you have the tools to contribute to FOSS (<a href='http://mne-tools.github.io/stable/contributing.html?highlight=contribute'>See MNE recommendation</a>).</li>
               <li> identify a specific pull request.</li>
               <li> contact the assigned core developer(s) <i>in advance</i> to discuss the requirements.</li>
-          </ul>
-          <p class="editable"> Else: </p>
-          <ul>
+           </ul>
+           <p class="editable"> Else: </p>
+           <ul>
   				    <li> open issues that need to be addressed in the coding sprint.</li>
               <li> ensure they contain explicit descriptions, a difficulty level and an assignee.</li>
-          </ul>
-				</p>
+           </ul>
+		  </p> -->
     </div>
   </section>
 
@@ -99,17 +91,17 @@ map:
 					</li>
 				{% endfor %}
 			</ul>
-			<p class="editable">
+<!-- 			<p class="editable">
 			The current developers focus on <i>neural</i> time series. However, we are particularly interested in productive exchange with other scientific fields that encounter similarly structured signals (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc).
 			</p>
-		</div>
+ -->		</div>
 	</section>
 
 	<section class="info" id="where-when">
 		<div class="container">
 			<div class="text">
 				<h2 class="editable">Where?</h2>
-				<p class="editable"><a href=https://www.google.com/maps/place/NYU+Center+for+Data+Science/@40.735016,-73.9969907,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2599787834ad9:0x5dd8af15d9fbc8a3!8m2!3d40.735016!4d-73.994802>60 5th Avenue, New York University, New York.</a></p>
+				<p class="editable"><a href=https://www.google.com/maps/place/Facebook+France/@48.8698235,2.337963,15z/data=!4m5!3m4!1s0x0:0x24710c8637133ca3!8m2!3d48.8698235!4d2.337963>Facebook office, 6 rue Ménars, Paris.</a></p>
 			</div>
 		</div>
 		<div class="container flex">
@@ -150,7 +142,7 @@ map:
 		<div class="container">
 			<div class="text">
 				<h2 class="editable">When?</h2>
-				<p class="editable">The sprint will take place Monday March 27<sup>th</sup> - Friday March 31<sup>st</sup>, 2017. The day-by-day schedule is TBD.</p>
+				<p class="editable">The sprint will take place Monday April 22<sup>nd</sup> - Friday April 26<sup>th</sup>, 2019. The day-by-day schedule is TBD.</p>
 			</div>
 		</div>
 	</section>
@@ -158,11 +150,11 @@ map:
 	<section class="contact", id="contact">
 		<div class="container">
 			<h2 class="editable">Contact</h2>
-        <p>jeanremi.king [at] gmail.com</p>
+        <p>alexandre.gramfort [at] gmail.com</p>
     </div>
   </section>
 
-  <section class="achievements", id="achievements">
+<!--   <section class="achievements", id="achievements">
 		<div class="container">
 			<h2 class="editable">Main enhancements</h2>
         <p><a href="https://github.com/mne-tools/mne-python/pull/4144">MNE: Add SPoC object to decode continuous targets from oscillatory activity</a></p>
@@ -179,7 +171,7 @@ map:
         <p><a href="https://github.com/glm-tools/pyglmnet/issues/158">pyGLMnet: Add GLM and GLMCV estimators.</a></p>
     </div>
   </section>
-
+ -->
   <section class="logos", id="logo">
 		<div class="container">
 			<div class="text">
