--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ bottom_image: /images/all-logo.png
 map:
   latitude: 48.869516
   longitude: 2.338116
-  address: "Facebook Office, 6 rue Ménars, Paris, France"
+  address: "Facebook, Paris, France"
   zoom: 13
 ---
 
@@ -15,7 +15,7 @@ map:
 		<div class="hero-text-container">
       <center>
   			<h1 class="editable">MNE Code Sprint 2019</h1>
-  			<p class="subtext editable"><b>April 22nt - 26th, Paris</b></p>
+  			<p class="subtext editable"><b>April 22nd - 26th, Paris</b></p>
       </center>
 		</div>
 	</div>
@@ -101,7 +101,7 @@ map:
 		<div class="container">
 			<div class="text">
 				<h2 class="editable">Where?</h2>
-				<p class="editable"><a href=https://www.google.com/maps/place/Facebook+France/@48.8698235,2.337963,15z/data=!4m5!3m4!1s0x0:0x24710c8637133ca3!8m2!3d48.8698235!4d2.337963>Facebook office, 6 rue Ménars, Paris.</a></p>
+				<p class="editable">Facebook, Paris</p>
 			</div>
 		</div>
 		<div class="container flex">
