--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 description: MNE Annual Coding Sprint 2019
-image: /images/background.png
+image: /images/background.jpg
 bottom_image: /images/all-logo.png
 map:
   latitude: 48.869516
