--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 title: Not Found
 description: This page doesn't exist!
-image: images/background.pngs
+image: images/background.jpg
 permalink: /404.html
 layout: page
 ---
