--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ map:
 	<section class="contact", id="contact">
 		<div class="container">
 			<h2 class="editable">Contact</h2>
+        <p>jeanremi.king [at] gmail.com</p>
         <p>alexandre.gramfort [at] gmail.com</p>
     </div>
   </section>
