fix typo in headline

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ map:
 	<section class="info" id="why-what">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Why a code print?</h2>
+				<h2 class="editable">Why a code sprint?</h2>
                     <p class="editable">
                         Alone you go fast and together we go far!
                     </p>
