--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ map:
                     </p>
 			        <p class="editable">
                         <a href="https://github.com/mne-tools/mne-python">MNE</a>
-                        is the most Python software to making sense of neural signals
+                        is the most popular Python software for making sense of neural signals
                         such as EEG or MEG. <a href="https://github.com/mne-tools/mne-python">MNE</a>
                         is developped by a community of developers scattered around the world.
                         The annual MNE code sprint is the moment for the MNE developers to exchange,
